--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
+    "react-zoom-pan-pinch": "^3.4.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
