--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
     "react-zoom-pan-pinch": "^3.4.4",
+    "tiff.js": "^1.0.0",
     "utif": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
